tests/NormalTests/paczka1/small_fuzzy/90201178.err
Error in line 2: GoTnFXFz A108 17,4
Error in line 3: GoTnFXFz S885 60,6
Error in line 10: C7fGaatKnl A328 57,0
Error in line 11: C7fGaatKnl S59 34,0
Error in line 13: C7fGaatKnl A328 8,6
